--- a/zoo.css
+++ b/zoo.css
@@ -1,37 +1,525 @@
 body{
-    background-color: orange; 
-}
-p{
-    text-align: left;
-    color: white;
-    font-size: 25px;
-}
-h1{
-color: brown;
-    font-size: 40px;
-}
-h4{
-    font-size:15px;
-}
-    nav.verticalNAV{
-float: center;
-margin-right:5%;
-width:50%;
-font-size:48em;
-}
-nav{ 
-    float:right;
-    font-size: 75px;
+    background-color: white;
 }
 
-nav.verticalNAV a{
-border-bottom:2px soilid rgb(23,96,155);
-color:rgb(23,96,155);
-line-height:2.2em;
-text-decoration: none;
+h1{
+    color: black;
+    text-align: center; 
+    font-size: 57px;
+    letter-spacing: 40px;
+
 }
-nav.veritcalNAV a:hover{
-background-color:rgb(105,95,87);
-background-color:rgba(255,255,255,0.3);
-border:2px solid rgb(23,96,155);
+
+ol{
+    text-align: center;
+    color: silver;
+    font-size: 50px;
 }
+
+h2{
+    font-size: 57px;
+    text-align: center;
+    color: Black;
+    letter-spacing: 40px;
+}
+h3{
+    text-align: center;
+    font-size: 35;
+}
+
+ 
+
+p{
+    font-size: 20px;
+    letter-spacing: 8px;
+}
+
+
+
+
+
+body {
+
+	 font-family: "Helvetica Neue", Arial, sans-serif;
+
+}
+
+
+
+
+
+
+
+
+#centerwell {
+
+   position: relative;
+    
+   height: 200px;
+   
+   background: #3d464e;
+
+   overflow: hidden;
+   
+  padding-left: 27%;
+
+  
+  
+
+}
+
+
+
+
+#centerwell li  {
+
+   position: relative;
+
+   width: 140px; height: 350px;
+
+   float: left;
+
+   border-right: #3d464e 1px solid;
+
+   background:#ECECEC;
+
+   overflow: hidden;
+
+   cursor: pointer;
+  
+
+}
+
+
+
+
+#centerwell h3 {
+
+   position: absolute;
+
+   top: 0; left: 0;
+
+   text-indent: -9999px;
+
+   width: 80px; height: 177px;
+   
+   letter-spacing: 1px;
+   
+  
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+#content {
+
+   position: relative;
+
+   width: 790px;
+
+   padding-bottom: 135px;
+
+}
+
+
+
+
+
+
+
+#primary_content {
+
+   padding-left: 205px;
+
+   padding-top: 30px;
+
+   padding-right: 40px;
+
+   width: 575px;
+
+}
+
+
+
+
+#primary_content p,
+
+#primary_content span,
+
+#primary_content em {
+
+   color: #657381;
+
+   font-size: 12px;
+
+   line-height: 16px;
+
+   letter-spacing: 1px;
+
+}
+
+
+
+
+#primary_content h2 {
+
+   line-height: 33px;
+
+   text-decoration: none;
+
+   font-size: 35px;
+
+   margin-bottom: 5px;
+
+   font-family: GeogrotesqueLight, Helvetica, Arial, sans-serif;
+
+   letter-spacing: 1px;
+
+}
+
+
+
+
+
+#primary_content span.title.current {
+
+   display: block;
+
+   font-size: 15px;
+
+   margin-bottom: 60px;
+
+   font-family: GeogrotesqueReg, Helvetica, Arial, sans-serif;
+
+   
+
+}
+
+
+
+
+#primary_content h2 a,
+
+#primary_content h1, 
+
+#primary_content h2, 
+
+#primary_content h3 {
+
+   color: #00aaf0;
+
+}
+
+
+
+
+#primary_content h3 {
+
+   margin-top: 38px;
+
+   margin-left: -213px;
+
+   padding-left: 3px;
+
+   border-left: #262b30 210px solid;
+
+   font-size: 18px;
+
+   font-family: GeogrotesqueReg, Helvetica, Arial, sans-serif;
+
+   letter-spacing: 1px;
+
+   margin-bottom: 12px;
+
+}
+
+
+
+
+#primary_content h5,
+
+#primary_content span.location {
+
+   display: block;
+
+   color: #9eaebe;
+
+   font-family: GeogrotesqueMedium, Helvetica, Arial, sans-serif;
+
+   font-size: 13px;
+
+   letter-spacing: 1px;
+
+}
+
+
+
+
+#primary_content span.title {
+
+  
+
+}
+
+
+
+
+#positions li {
+
+   position: relative;
+
+   margin-bottom: 20px;
+
+}
+
+
+
+
+#positions li em {
+
+   display: block;
+
+   margin-bottom: 4px;
+
+}
+
+
+
+
+#positions li span.date {
+
+	 position: absolute;
+
+	 color: #373e46;
+
+	 font-family: GeogrotesqueReg, Helvetica, Arial, sans-serif;
+
+	 top: -1px;
+
+	 left: -90px;
+
+	 width: 85px;
+
+}
+
+
+
+
+#secondary_content {
+
+   position: absolute;
+
+   top: 0;
+
+   right: 0;
+
+   width: 0px;
+
+   background: ;
+
+   padding-top: 0px;
+
+   padding-left: 0px;
+
+   padding-right: 0px;
+
+   padding-bottom: 0px;
+
+   color: #9eaebe;
+
+   font-size: 11px;
+
+   overflow: hidden;
+
+}
+
+
+
+
+#secondary_content h5 {
+
+   color: #00aaf0;
+
+   font-size: 18px;
+
+   font-family: GeogrotesqueReg, Helvetica, Arial, sans-serif;
+
+   margin-bottom: 8px;
+
+   letter-spacing: 1px;
+
+}
+
+
+
+
+#secondary_content ul li h6 {
+
+   color: #9eaebe;
+
+   font-size: 13px;
+
+   font-family: GeogrotesqueReg, Helvetica, Arial, sans-serif;
+
+   letter-spacing: 1px;
+
+   line-height: 23px;
+
+}
+
+
+
+
+#secondary_content ul li p {
+
+   color: #657381;
+
+   line-height: 15px;
+
+   margin-bottom: 15px;
+
+}
+
+
+
+#thecssawards{
+
+  position:absolute;
+
+  top:20px;
+
+  right:0px;
+
+  z-index:555;
+
+}
+
+#thecssawards a{
+
+  width:69px;
+
+  height:105px;
+
+  text-indent:-8000px;
+
+  display:block;
+
+  background: url(../img/award_day_black.png) no-repeat;
+
+}
+
+
+
+
+
+html, body, div, span, applet, object, iframe, blockquote, pre,
+
+a, abbr, acronym, address, big, cite, code,
+
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+
+small, strike, strong, sub, sup, tt, var,
+
+b, u, i, center,
+
+dl, dt, dd, ol, ul, li,
+
+fieldset, form, label, legend,
+
+table, caption, tbody, tfoot, thead, tr, th, td {
+
+	 margin: 0;
+
+	 padding: 0;
+
+	 border: 0;
+
+	 outline: 0;
+
+	 font-size: 100%;
+
+	 vertical-align: baseline;
+
+	 background: transparent;
+
+}
+
+body {
+
+	 line-height: 1;
+
+}
+
+ol, ul {
+
+	 list-style: none;
+
+}
+
+blockquote, q {
+
+	 quotes: none;
+
+}
+
+blockquote:before, blockquote:after,
+
+q:before, q:after {
+
+	 content: '';
+
+	 content: none;
+
+}
+
+
+
+
+/* remember to define focus styles! */
+
+:focus {
+
+	 outline: 0;
+
+}
+
+
+ins {
+
+	 text-decoration: none;
+
+}
+
+del {
+
+	 text-decoration: line-through;
+
+}
+
+
+
+
+/* tables still need 'cellspacing="0"' in the markup */
+
+table {
+
+	 border-collapse: collapse;
+
+	 border-spacing: 0;
+
+}
+      	#centerwell li:hover {
+            width: 318px;
+         }
+         #centerwell li:hover h3 {
+            background-position-x: -72px;
+         }   
